feat (Swagger): separate swagger annotations
